Finished translations for EventOverview and AddExpense